--- a/mapbox-geojson.html
+++ b/mapbox-geojson.html
@@ -4,7 +4,19 @@
 
 <head>
     <style>
-  
+    body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    }
+
+    html,
+    #map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
     </style>
     <title> Adding Markers with Mapbox </title>
     <script src='https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.js'></script>
