--- a/week-three.html
+++ b/week-three.html
@@ -28,15 +28,17 @@
 <body>
     <div id="map"></div>
     <script>
+    L.mapbox.accessToken = 'pk.eyJ1IjoibGlsaWVzcCIsImEiOiJjajd0MzA2eHExanZmMzJvMzd6bHU2b3duIn0.VjIWetWJqz8xXwrjYKQehQ';
+    var map = L.map('map').setView([42.3104329,-71.1218777], 13);
 
-  L.mapbox.accessToken = 'pk.eyJ1IjoibGlsaWVzcCIsImEiOiJjajd0MzA2eHExanZmMzJvMzd6bHU2b3duIn0.VjIWetWJqz8xXwrjYKQehQ';
-    var map = L.map('map').setView([42.3104329,-71.1218777], 14);
-
-     L.tileLayer('http://tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
+    L.tileLayer('http://tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
+        maxZoom: 18,
+        minZoom: 11,
         attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.'
-    }).addTo(map);    
+    }).addTo(map);  
 
-    omnivore.geojson('jamaicaplain.geojson').addTo(map);
+    omnivore.geojson('jamaicaplain-2.geojson').addTo(map);
+
     </script>
 </body>
 
