final week 3 push

--- a/week-three.html
+++ b/week-three.html
@@ -34,10 +34,15 @@
     L.tileLayer('http://tile.stamen.com/toner-lite/{z}/{x}/{y}.png', {
         maxZoom: 18,
         minZoom: 11,
+
         attribution: 'Map tiles by <a href="http://stamen.com">Stamen Design</a>, under <a href="http://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>. Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.'
     }).addTo(map);  
 
     omnivore.geojson('jamaicaplain-2.geojson').addTo(map);
+    
+    map.data.onClick('click', function(e) {
+        map.panTo(e.layer.getLatLng());
+    });
 
     </script>
 </body>
